# oortexa

./: .gitignore  LICENSE  README.md  oortexa.yml.example  pyproject.toml  rc.run_example  rc.setup_example  requirements.txt
examples/container/: build.sh  oortexa.yml.base  setup.sh
examples/docker/: build_src.sh  oortexa.yml.base
examples/local/: .gitignore  build.sh  build_src.sh  local_demo.c  oortexa.yml.base  setup.sh
examples/prompts/: analyst.md  executor.md  executor_tools.md  orchestrator.md
examples/ssh/: .gitignore  build.sh  oortexa.yml.base  setup.sh
examples/ssh_container/: .gitignore  build.sh  oortexa.yml.base
examples/ssh_podman/: oortexa.yml.base  setup.sh
oortexa/: __main__.py  abstract_tools.py  mcp.py  mcp_server.py  oortexa.py
skills/oortexa_remote/: SKILL.md
