[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "oortexa"
version = "0.1.0"
description = "Orchestrated Operations for Remote Tasking and Execution Agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-openai",
    "langgraph",
    "pyyaml",
    "mcp",
    "fabric>=3.2",
]

[project.urls]
Homepage = "https://github.com/ruxven/oortexa"
Repository = "https://github.com/ruxven/oortexa"

[project.scripts]
oortexa = "oortexa.oortexa:main"

[tool.setuptools.packages.find]
include = ["oortexa*"]
